# amc-rag-bot

./: .env-example  .gitignore  .pylintrc  README.md  TEST_REPORT.md  pipdeptree.txt  pyproject.toml  pytest.ini  system_prompt_reason.txt
.github/workflows/: ci.yml  codeql.yml  python-app.yml
bot/: config.py  index_builder.py  main.py  rag_langchain.py  requirements-backup.txt  requirements.txt  rerank.py
data/parsers/: parse_mobs.py  parse_skills.py
parsers/: parse_mobs.py  parse_skills.py  parse_skirpts.py
src/asketmc_bot/: __init__.py  config.py  discord_bot.py  index_builder.py  lemma.py  llm_client.py  main.py  rag_filter.py  rag_langchain.py  rerank.py
src/asketmc_bot/data/: rephrase.txt  system_prompt_strict.txt
tests/: conftest.py  test_config_validation.py  test_discord_bot.py  test_entrypoint.py  test_llm_client.py  test_query_model_unit.py  test_rag_filter.py  test_rerank.py
