[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asketmc-bot"
version = "0.1.1"
description = "RAG Discord bot"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.9.5",
    "aiosignal==1.3.2",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "backoff==2.2.1",
    "banks==2.1.2",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.4",
    "black==24.4.2",
    "blis==1.3.0",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "catalogue==2.0.10",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "chromadb==1.0.12",
    "click==8.2.1",
    "cloudpathlib==0.21.1",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "confection==0.1.5",
    "coverage==7.5.1",
    "cymem==2.0.11",
    "dataclasses-json==0.6.7",
    "DAWG-Python==0.7.2",
    "Deprecated==1.2.18",
    "dirtyjson==1.0.8",
    "discord.py==2.5.2",
    "distro==1.9.0",
    "docopt==0.6.2",
    "durationpy==0.10",
    "emoji==2.14.1",
    "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.9",
    "filelock==3.18.0",
    "filetype==1.2.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "google-auth==2.40.3",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3",
    "griffe==1.7.3",
    "grpcio==1.73.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.33.0",
    "humanfriendly==10.0",
    "idna==3.10",
    "importlib_metadata==8.7.0",
    "importlib_resources==6.5.2",
    "iniconfig==2.1.0",
    "inquirerpy==0.3.4",
    "Jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kubernetes==33.1.0",
    "langcodes==3.5.0",
    "langdetect==1.0.9",
    "language_data==1.3.0",
    "llama-cloud==0.1.26",
    "llama-cloud-services==0.6.34",
    "llama-index==0.12.43",
    "llama-index-agent-openai==0.4.11",
    "llama-index-cli==0.4.3",
    "llama-index-core==0.12.43",
    "llama-index-embeddings-huggingface==0.5.4",
    "llama-index-embeddings-ollama==0.6.0",
    "llama-index-embeddings-openai==0.3.1",
    "llama-index-indices-managed-llama-cloud==0.7.7",
    "llama-index-instrumentation==0.1.0",
    "llama-index-llms-ollama==0.6.2",
    "llama-index-llms-openai==0.4.7",
    "llama-index-multi-modal-llms-openai==0.5.1",
    "llama-index-program-openai==0.3.2",
    "llama-index-question-gen-openai==0.3.1",
    "llama-index-readers-file==0.4.9",
    "llama-index-readers-llama-parse==0.4.0",
    "llama-index-workflows==0.2.2",
    "llama-parse==0.6.34",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "mpmath==1.3.0",
    "multidict==6.5.0",
    "murmurhash==1.0.13",
    "mypy==1.10.0",
    "mypy_extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "oauthlib==3.3.0",
    "ollama==0.5.1",
    "onnxruntime==1.22.0",
    "openai==1.88.0",
    "opentelemetry-api==1.34.1",
    "opentelemetry-exporter-otlp-proto-common==1.34.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.34.1",
    "opentelemetry-instrumentation==0.55b1",
    "opentelemetry-instrumentation-asgi==0.55b1",
    "opentelemetry-instrumentation-fastapi==0.55b1",
    "opentelemetry-proto==1.34.1",
    "opentelemetry-sdk==1.34.1",
    "opentelemetry-semantic-conventions==0.55b1",
    "opentelemetry-util-http==0.55b1",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "pathspec==0.12.1",
    "pfzy==0.3.4",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "posthog==5.0.0",
    "preshed==3.0.10",
    "prompt_toolkit==3.0.51",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.2",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "Pygments==2.19.1",
    "pymorphy2==0.9.1",
    "pymorphy2-dicts-ru==2.4.417127.4579844",
    "pypdf==5.6.0",
    "PyPika==0.48.9",
    "pyproject_hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-json-logger==2.0.7",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-oauthlib==2.0.0",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "ruff==0.4.0",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "sentence-transformers==2.7.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smart-open==7.1.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "SQLAlchemy==2.0.41",
    "srsly==2.5.1",
    "stanza==1.7.0",
    "starlette==0.45.3",
    "striprtf==0.0.26",
    "sympy==1.14.0",
    "tenacity==8.5.0",
    "thinc==8.3.6",
    "threadpoolctl==3.6.0",
    "tiktoken==0.9.0",
    "tokenizers==0.19.1",
    "toml==0.10.2",
    "tomli==2.2.1",
    "torch==2.1.0",
    "torchaudio==2.1.0",
    "torchvision==0.16.0",
    "tqdm==4.67.1",
    "transformers==4.40.2",
    "typer==0.16.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "wasabi==1.1.3",
    "watchfiles==1.1.0",
    "wcwidth==0.2.13",
    "weasel==0.4.1",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zipp==3.23.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio"
]
gpu = [
    "torch==2.1.0+cu118",
    "torchaudio==2.1.0+cu118",
    "torchvision==0.16.0+cu118"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["asketmc_bot"]
include-package-data = true

[project.scripts]
asketmc-bot = "asketmc_bot.main:cli"
